<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, asa!</string>
	<string name="app_name">Vrtnar</string>
	<color name="zelena">#006600</color>
	<color name="red">#C11B17</color>
	<string name="dnevi_sajenja">Dnevi v tednu</string>
	<string name="dnevi_zalivanja">Dnevi v tednu</string>
	<string name="Monday">Ponedeljek</string>
	<string name="Tuesday">Torek</string>
	<string name="Wednesday">Sreda</string>
	<string name="Thursday">Četrtek</string>
	<string name="Friday">Petek</string>
	<string name="Saturday">Sobota</string>
	<string name="Sunday">Nedelja</string>
	<string name="obeti_txt">Obeti</string>
</resources>
